<resources>
    <string name="app_name">Astrolabe</string>

    <string name="general_error">Something went wrong</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="non_stable_connection">Error connecting to the internet</string>
    <string name="show_my_location">Show my location</string>
    <string name="all_maps">All maps</string>
    <string name="layers_manager">Layers manager</string>
    <string name="marker">Marker</string>
    <string name="line">Line</string>
    <string name="polygon">Polygon</string>
    <string name="drawing_line">Drawing line…</string>
    <string name="drawing_polygon">Drawing polygon…</string>
    <string name="cancel">Cancel</string>
    <string name="available_maps">Available Maps</string>
    <string name="_new">New</string>
    <string name="map_sources">Map sources</string>
    <string name="set_as_base_map">Set as base map</string>
    <string name="add_as_map_layer">Add as map layer</string>

    <string name="open_street_map">Open Street Map</string>

    <string name="google_hybrid">Hybrid</string>
    <string name="google_satellite">Satellite</string>
    <string name="google_roads">Roads</string>

    <string name="bing_hybrid">Aerial with labels</string>
    <string name="bing_road">Road</string>
    <string name="bing_aerial">Aerial</string>

    <string name="mapbox_streets">Streets</string>
    <string name="mapbox_light">Light</string>
    <string name="mapbox_dark">Dark</string>
    <string name="mapbox_satellite">Satellite</string>
    <string name="mapbox_satellite_streets">Satellite with streets</string>
    <string name="mapbox_outdoors">Outdoors</string>
    <string name="mapbox_pencil">Pencil</string>

    <string name="here_we_go_day">Normal (Day)</string>
    <string name="here_we_go_night">Normal (Night)</string>
    <string name="here_we_go_traffic_day">Traffic (Day)</string>
    <string name="here_we_go_traffic_night">Traffic (Night)</string>
    <string name="here_we_go_satellite">Satellite</string>
    <string name="here_we_go_hybrid">Hybrid</string>

    <string name="thunderforest_open_cycle_map">Open Cycle Map</string>
    <string name="thunderforest_transport">Transport</string>
    <string name="thunderforest_transport_dark">Transport (Dark)</string>
    <string name="thunderforest_lanscape">Landscape</string>
    <string name="thunderforest_outdoors">Outdoors</string>
    <string name="opacity_">Opacity:</string>
    <string name="opacity">Opacity</string>
    <string name="done">Done</string>
    <string name="add_layer">Add layer</string>
    <string name="add">Add</string>
    <string name="use">Use Map</string>
    <string name="change">Change</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="remove">Remove</string>
    <string name="layers">Layers</string>
    <string name="base_map">Base map</string>
    <string name="no_layers">No layers</string>
    <string name="map_layers">Map layers</string>
    <string name="error_loading_wms_capabilities">Error loading WMS capabilities</string>
    <string name="delete">Delete</string>
    <string name="maps">Maps</string>
    <string name="wms_layers">WMS layers</string>
    <string name="new_wms_service">New WMS service</string>
    <string name="check">Check</string>
    <string name="invalid_getcapabilities_endpoint">Invalid GetCapabilities endpoint</string>
    <string name="wms_service_saved_successfully">WMS service saved successfully</string>
    <string name="no_wms_services">No WMS Services</string>
    <string name="no_items">No Items</string>
    <string name="get_capabilities_url">GetCapabilities endpoint URL…</string>
    <string name="url"><![CDATA[http://ows.terrestris.de/osm/service?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetCapabilities]]></string>
    <string name="deleted_successfully">Deleted successfully</string>
</resources>
